MyDevOrg/src/objects/Release__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Release_date__c</fullName>
        <label>Actual Release date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <label>Target Release Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REL{00000}</displayFormat>
        <label>Release ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>